# Mnemosyne

./: CMakeLists.txt  README.md  build.bat  build_and_run.bat
